@@ -122,6 +122,11 @@ bool Device::snapshot(int format, const char* filename)
   return rglview->snapshot( (PixmapFileFormatID) format, filename);
 }
 // ---------------------------------------------------------------------------
+bool Device::pixels(int* ll, int* size, int component, float* result)
+{
+  return rglview->pixels( ll, size, component, result);
+}
+// ---------------------------------------------------------------------------
 RGLView* Device::getRGLView(void)
 {
   return rglview;
